fix: adjust powered by component spacing

--- a/packages/logos-docusaurus-theme/src/client/components/mdx/PoweredBy/PoweredBy.scss
+++ b/packages/logos-docusaurus-theme/src/client/components/mdx/PoweredBy/PoweredBy.scss
@@ -33,6 +33,7 @@
 
   button {
     width: 100%;
+    padding: 10px 16px;
 
     & > span {
       display: block;
